Mik suggestions for 1.3 (not subs) sentence case for headings

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -9,22 +9,28 @@ library(kableExtra)
 <!-- \pagenumbering{arabic} -->
 Charles @darwin1909origin in The Origin of Species declared: _“[The] preservation of favourable individual differences and variations, and the destruction of those which are injurious, I have called Natural Selection or Survival of the Fittest. Variations neither useful or injurious would not be affected by natural selection, and would be left either a fluctuating element, as perhaps we see in certain polymorphic species, or would ultimately become fixed, owing to the nature of the organism and the nature of the conditions.”_ This theory set the scene for research in population biology. Selection acts upon the phenotype and this pressure then transfers through to act upon the genetic make-up of that phenotype. Most important to this review is that Darwin’s Theory also created models for what natural selection should look like and the methods for being able to detect selective events on the genetics of organisms. A focus on selection in humans has added insight into past events since migration out of Africa [@Soares2012] and yielded possibilities of the influences on human disease.
 
+## Settlement of Polynesia
 
-## Neutrality and Genetic Drift
+## Metabolic syndrome
 
-The random sampling of alleles can cause an increase or decrease in allele frequency of a population leads to genetic drift. @Wright1931 proposed genetic drift as an evolutionary model. He put forward that by chance, in a finite population without selection acting, an allele could increase in frequency over generations and time, change significantly from the original frequency values. Fisher believed that “Natural Selection depends on the succession of favourable chances”, and thought that genetic drift was insignificant compared to selection [@Fisher1930]. In Fisher's model, genetic variation would disappear at an extremely slow rate in a population without selection, and a moderate rate of new mutations would be enough to maintain the population variability [@Fisher1922]. @Feller1951 unified the population models from both Wright and Fisher into what is now known as the Wright-Fisher model. The Wright-Fisher model in its simplest form treats a diploid population of size N as a haploid population of 2N. In unifying the population models Feller noted that the assumption of constant population size contributes more than was previously thought, and this had been crucial in Wright’s model for gene frequency to satisfy a diffusion equation.
+### Gout
+
+## Neutrality and genetic drift
+
+The random sampling of alleles can cause an increase or decrease in allele frequency of a population leading to genetic drift. @Wright1931 proposed genetic drift as an evolutionary model. He put forward that by chance, in a finite population without selection acting, an allele could increase in frequency over generations and time, changing significantly from the original frequency values. Fisher believed that “Natural Selection depends on the succession of favourable chances”, and thought that genetic drift was insignificant compared to selection [@Fisher1930]. In Fisher's model, genetic variation would disappear at an extremely slow rate in a population without selection, and a moderate rate of new mutations would be enough to maintain the population variability [@Fisher1922]. @Feller1951 unified the population models from both Wright and Fisher into what is now known as the Wright-Fisher model. The Wright-Fisher model in its simplest form treats a diploid population of size N as a haploid population of 2N. In unifying the population models Feller noted that the assumption of constant population size contributes more than was previously thought, and this had been crucial in Wright’s model for gene frequency to satisfy a diffusion equation.
 
 Motoo Kimura added further to the genetic drift side of the discussion with his neutral theory of molecular evolution. The neutral theory of molecular evolution put forward by @Kimura1979a states that most evolutionary change is not due to selection but is due to random genetic drift. The term “drift” was used because the variants under neutrality are expected to convey no advantage, and rise and fall (or drift) randomly in prevalence over time. Random genetic drift plays a role in population structure by keeping the number of co-existing alleles down [@Kimura1955]. One of the problems with the neutral theory was how the diversity of species could be accounted for. The solution to this can be explained through a positive correlation between increased genetic diversity and an increase in recombination, hinting at a rise in mutation rate as frequency of genetic exchange increases [@Hellmann2003]. This link provided an explanation of a neutral process leading to increased genetic diversity.
 
-Crucial to both the neutral theory and the theory of natural selection is the estimation of the population mutation rate, commonly referred to as $\theta$. The Watterson estimator, $\theta$ = 2 . ploidy . N ~e~ . $\mu$, represents the expected number of new mutations for a population per generation [@Watterson1975], where $\mu$ is the mutation rate and N~e~ is the effective population size. Effective population size is the size of an idealised population with the same amount of inbreeding or random gene frequency drift as the population under consideration [@KimuraCrow1963]. Other estimators of $\theta$ include: $\hat{\theta}$ = F~ST~ [@Weir1984], and $\hat{\theta}$ = E($\pi$), in the infinite sites model, where $\mu$ is the average pair-wise nucleotide differences per site [@Tajima1996a]. The infinite sites model assumes only one mutation occurs per site.
+Crucial to both the neutral theory and the theory of natural selection is the estimation of the population mutation rate, commonly referred to as $\theta$. The Watterson estimator, $\theta$ = 2 $\times$ ploidy $\times$ N~e~ $\times$ $\mu$, represents the expected number of new mutations for a population per generation [@Watterson1975], where $\mu$ is the mutation rate and N~e~ is the effective population size. Effective population size is the size of an idealised population with the same amount of inbreeding or random gene frequency drift as the population under consideration [@KimuraCrow1963]. Other estimators of $\theta$ include: $\hat{\theta}$ = F~ST~ [@Weir1984], and $\hat{\theta}$ = E($\pi$), in the infinite sites model, where $\mu$ is the average pair-wise nucleotide differences per site [@Tajima1996a]. The infinite sites model assumes only one mutation occurs per site.
 
 Natural selection seems to be the more popular model to the neutral hypothesis, however the methodology for detecting selection utilises the neutral hypothesis for many of the methods mentioned later (section \@ref(selMethods)). These methods use a model for neutrality, and if the statistic reaches a level that is considered to be beyond that of the neutral model, the model is rejected. Typically the neutral hypothesis is a composite hypothesis using assumptions for which it would be difficult to find a human population that fulfils them, such as: “the population is in equilibrium at constant size with no population subdivision or gene flow from other populations” [@Nielsen2005a].
 
 ## Selection
 
-Possible types of selection that can act upon a population include balancing, background or directional selection. Balancing selection maintains both alleles in a population and is often the case when the heterozygote has an advantage over the homozygote and can be referred to as over dominant selection. An example of this is MHC class 1 [@Hughes1988] or sickle-cell anaemia [@Allison1956]. Background selection is a reduction of genetic diversity at a locus because of deleterious selection acting on a separate but linked locus [@Charlesworth1993]. Background selection can be thought of as the opposite effect to genetic hitch-hiking. Directional selection operates in two fashions, positive or negative. Positive selection is where an allele conveys an advantage in fitness that enhances reproductive success, resulting in the beneficial allele increasing in frequency within the population. An example of positive selection is the lactase gene in European populations which enables the absorption of lactose [@Bersaglieri2004]. Negative selection occurs when the allele conveys a fitness disadvantage and ends with reduced reproductive success, decreasing the frequency of the allele in the population. The cystic fibrosis gene _CFTR_, is an example of negative selection, where in males splicing mutations can lead to sterility [@Pagani2005].
+Possible types of selection that can act upon a population include balancing, background, or directional selection. Balancing selection maintains both alleles in a population and is often the case when the heterozygote has an advantage over the homozygote and can be referred to as "over-dominant selection". An two examples of this is MHC class 1 [@Hughes1988] and sickle-cell anaemia [@Allison1956]. With sickle-cell anaemia, individuals homozygous for normal haemoglobin alpha are susceptible to malaria, individuals homozygote for the 'sickling' mutation develop sickle-cell disease, and the heterozygote has a protective effect against malarial infection [Aidoo2002]. "Background selection" is a reduction of genetic diversity at a locus because of deleterious selection acting on a separate but linked locus [@Charlesworth1993]. Background selection can be thought of as the opposite effect to genetic hitch-hiking. Genetic hitch-hiking occurs when a locus is under selection, linked sites on the same chromosome will increase in frequency, causing a change in frequency of the alleles that are not on the same chromosome [@Smith1974]. \Gls{ld} can arise at sites that are under directional selection, even when the loci are unlinked [@Felsenstein1965] but, recombination will act to reduce this \gls{ld}. 
 
-\Gls{ld} can arise at sites that are under directional selection, even when the loci are unlinked [@Felsenstein1965]. Recombination will act to reduce this \gls{ld}. @Smith1974 came up with the concept of genetic hitch-hiking to explain the rise in \gls{ld} during a selective event. Genetic hitch-hiking occurs when a locus is under selection, linked sites on the same chromosome will increase in frequency, causing a change in frequency of the alleles that are not on the same chromosome.
+Directional selection operates in two fashions, positive or negative. Positive selection is where an allele conveys an advantage in fitness that enhances reproductive success, resulting in the beneficial allele increasing in frequency within the population. An example of positive selection is the lactase gene in European populations which enables the absorption of lactose [@Bersaglieri2004]. Negative selection occurs when the allele conveys a fitness disadvantage and ends with reduced reproductive success, decreasing the frequency of the allele in the population. The cystic fibrosis gene _CFTR_, is an example of negative selection, where in males splicing mutations can lead to sterility [@Pagani2005].
+
 
 The way selection can affect allele frequencies can be thought of as a sweep: as an allele is selected it “sweeps” through the population. The intensity of this sweep can be classified as, hard, soft, and partial or incomplete. A hard sweep, also known as a classical sweep, is when a beneficial allele rapidly rises in frequency and through hitch-hiking the neutral variation is simultaneously reduced at linked sites, as shown in Figure \@ref(fig:sweepDiagram) [@Hermisson2005;@Hermisson2017; @Nielsen2005; @Smith1974].
 
@@ -42,11 +48,11 @@ A partial or incomplete sweep occurs when part way through a sweep the selective
 
 In order to determine if a selective event has occurred, one can attempt to find what are termed “signatures of selection”. Population differentiation can sometimes be indicative of a selective event. If extreme levels of differentiation are observed at a locus between populations, this can be interpreted as evidence of positive selection. Regions of the genome that have a reduction in variability in a population can be the effect of a selective sweep. A third example of a signature of selection are deviations in the frequency spectrum for alleles beyond what would be considered possible under neutrality [@Przeworski2002]. A key signature of positive selection is the increase in proportion of high frequency variants [@fay2000hitchhiking].
 
-Assuming a background of neutrality means that there needs to be a way to identify variants under selection as opposed to population demographic events, such as bottlenecks or expansions. In the case of Polynesian settlement, there is evidence for a founder effect which will need to be considered when interpreting selection results [@Kayser2006a]. It is for this reason that the unique features of a selective event need to be able to be identified from other possible features such as population demography or admixture. Population events and demography affect the entire genome, whereas selection acts on a localised region [@Stajich2005]. To be able to recreate demography, the choice in the \glspl{snp} used is important as there is chance for a large ascertainment bias if \glspl{snp} are only selected from a small number of populations [@Wall2008]. The \glspl{snp} used also need to be sampled away from genic areas.
+Assuming a background of neutrality means that there needs to be a way to identify variants under selection as opposed to population demographic events, such as bottlenecks or expansions. In the case of Polynesian settlement, there is evidence for a founder effect which will need to be considered when interpreting selection results [@Kayser2006a]. It is for this reason that the unique features of a selective event need to be able to be identified from other possible features such as population demography or admixture. Population events and demography affect the entire genome, whereas selection acts on a localised region [@Stajich2005]. To be able to recreate demography, the choice in the \glspl{snp} used in the calculation of neutrality and selection statistics is important as there is chance for a large ascertainment bias if \glspl{snp} are only selected from a small number of populations [@Wall2008]. The \glspl{snp} used also need to be sampled away from genic areas.
 
-## Methods
+## Methods {#selMethods}
 
-Since 2005 there have been multiple reviews published (see @Nielsen2005, @sabeti2006positive, @Utsunomiya2015, @Vitti2013 and @Haasl2016) on methods of identifying selection, as there has been a renewed interest and push to examine selection at a genome wide scale due to increased availability of whole genomes. Methods that have been developed to detect signatures of selection can be placed into two main categories, those that only work on a single population and those that compare between populations. There are also main underlying genetic features that these methods can use, such as allele frequency (frequency spectrum methods) or differences in haplotype (linkage methods). There are also methods that combine different types of method (composite methods). A summary of selection methods discussed is provided in Table \@ref(tab:selectionMethods).
+Since 2005 there have been multiple reviews published (see @Nielsen2005, @sabeti2006positive, @Utsunomiya2015, @Vitti2013 and @Haasl2016) on methods of identifying selection, as there has been a renewed interest to examine selection at a genome wide scale due to increased availability of whole genome genotype data. Methods that have been developed to detect signatures of selection can be placed into two main categories, those that only work on a single population and those that compare between populations. There are also specific underlying genetic features that these methods can use, such as allele frequency (frequency spectrum methods) or differences in haplotype (linkage methods). There are also methods that combine different approaches (composite methods). A summary of selection methods is provided in Table \@ref(tab:selectionMethods).
 
 <!-- Table: (\#tab:selectionMethods) _Summary of Selection Methods_ -->
 
@@ -107,7 +113,7 @@ Since 2005 there have been multiple reviews published (see @Nielsen2005, @sabeti
 <!-- make sure to update so that it includes the statistics used -->
 
 
-The different methods for detecting selection work best over different time periods. Recent soft sweeps are able to be detected well with \gls{ld}-based methods but frequency spectrum tests struggle with the opposite being the case for hard sweeps [@Hermisson2005]. In humans, the method that is able to detect the most ancient selection, ranging to millions of years ago is the Ka/Ks ratio, however if a strong background of neutrality is present this can undermine the effectiveness of the test. \gls{td} is able to detect selection events as old as 250,000 years ago in regions of low diversity containing and excess of rare alleles. \gls{fwh} is able to detect events less than 80,000 years ago based on derived alleles having arisen through mutation and then risen to a high frequency via hitch-hiking. F~ST~, in the range of less than 50,000 to 70,000 years ago, picks up geographic separation of populations that have been subject to different physical and cultural environments based on the changes in allele frequency in one population versus another. Methods relying on long haplotypes such as \gls{ihs} have the shortest range at less than 30,000 years ago for a long haplotype that hasn't had time to break down through recombination and contains a high frequency variant. Partial sweeps can also be detected down to a \gls{maf} of approximately 10% [@sabeti2006positive].
+The different methods for detecting selection work best over different time periods. Recent soft sweeps are able to be detected well with \gls{ld}-based methods, but frequency spectrum tests struggle [@Hermisson2005]. The opposite applies in the case of hard sweeps [@Hermisson2005]. In humans, the method that is able to detect the most ancient selection, ranging to millions of years ago is the Ka/Ks ratio, however if a strong background of neutrality is present this can undermine the effectiveness of the test. \gls{td} is able to detect selection events as old as 250,000 years ago in regions of low diversity containing and excess of rare alleles. \gls{fwh} is able to detect events less than 80,000 years ago based on derived alleles having arisen through mutation and then risen to a high frequency via hitch-hiking. F~ST~, in the range of less than 50,000 to 70,000 years ago, picks up geographic separation of populations that have been subject to different physical and cultural environments based on the changes in allele frequency in one population versus another. Methods relying on long haplotypes such as \gls{ihs} have the shortest range at less than 30,000 years ago for a long haplotype that hasn't had time to break down through recombination and contains a high frequency variant. Partial sweeps can also be detected down to a \gls{maf} of approximately 10% [@sabeti2006positive].
 
 ```{r, eval = TRUE, echo = FALSE}
 tibble(
@@ -118,7 +124,7 @@ tibble(
 ) %>% kable(., escape = FALSE, col.names = c("Method","Detects selection within or between populations", "Timeframe", "Key reference"), caption = " (\\#tab:selectionMethods) Summary of Selection Methods", booktabs = TRUE, format = 'latex') %>% group_rows("Macroevolutionary", 1, 2) %>% group_rows("Haplotypic", 3, 5) %>% group_rows("Frequency spectrum", 6, 12) %>% group_rows("Composite", 13, 17) %>% column_spec(2, width = '10em')
 ```
 
-### Macroevolutionary
+### Macroevolutionary methods
 
 #### Ka/Ks
 The ratio of non-synonymous to synonymous mutations is called the Ka/Ks ratio or dN/dS ratio as it is often referred to, is used to infer functional impact from selection, since synonymous mutations are thought of as silent mutations with a neutral effect on the protein [@Hughes1988]. Comparing the baseline rate of mutation (synonymous) to the non-synonymous rate gives an understanding of the tolerance of amino acid alternatives in the protein, with an excess of non-synonymous mutations indicating the novel protein structures are being favoured and the protein is being positively selected for. A Ka/Ks ratio greater than 1 is indicative of positive selection, while a value less than 1 is indicative of negative selection against deleterious mutations and for keeping the protein conserved.
@@ -127,11 +133,11 @@ The ratio of non-synonymous to synonymous mutations is called the Ka/Ks ratio or
 
 The HKA test [@Hudson1987] compares between and within populations the polymorphism and divergence of two or more loci, and uses this to establish if a loci has been under selection, since variation within, and diversity between, species under neutrality should be based only on the mutation rate.
 
-### Haplotypic Methods
+### Haplotypic methods
 
 There are a few methods that are different derivations and applications of looking at haplotype decay around a core \gls{snp}. @sabeti2006positive put forward the concept of using \gls{ehh}. The haplotypes that had unusually long haplotype homozygosity and a high frequency in the population indicated that the polymorphism had risen in prominence faster than it would be expected under the neutral model and therefore under selection. The main concept is that a beneficial mutation wouldn't solely be selected for, but the surrounding region would initially be selected and therefore have a conservation effect. As time and generations progressed this haplotype would decay due to recombination and this haplotype decay can be used to assist in the ageing of the selection event. In order to use haplotypic methods, there is a requirement to establish the alleles that were inherited from the maternal side and those that were inherited from the paternal side making the two haplotypes (phasing).
 
-#### Integrated Haplotype Homozygosity Score
+#### Integrated haplotype homozygosity score
 
 \glsdesc{ihs} [@voight2006map] starts with \gls{ehh} which is the probability that 2 chromosomes are carrying a core haplotype are homogenous to the distance x, 0 is no homozygosity meaning all haplotypes are different, 1 is complete homozygosity  meaning all haplotypes are the same. The \gls{ehh} value versus distance is integrated to find the area under \gls{ehh} curve until \gls{ehh} decays to 0.05. This \gls{ihh} is calculated based on the ancestral or derived allele and annotated as \gls{ihh}_A_ or \gls{ihh}_D_. The unstandardised \gls{ihs} is calculated in equation \@ref(eq:ihs). Standardisation of \gls{ihs} is shown in equation \@ref(eq:stdihs), where the expectations and standard deviation of equation \@ref(eq:ihs) are estimated from the empirical distribution of SNPs whose derived allele frequency p matches the frequency at the core \gls{snp}[@voight2006map]. Large positive values indicate long haplotypes carrying the ancestral allele. \Gls{ihs} identifies variants under selection driven to intermediate frequencies.
 
@@ -146,7 +152,7 @@ iHS_{std} = \ln{\frac{iHH_A}{iHH_D}} - \frac{E_p [\ln{\frac{iHH_A}{iHH_D}}] }{ S
 \end{equation}
 
 
-#### Cross Population Extended Haplotype Homozygosity
+#### Cross population extended haplotype homozygosity
 
 \Gls{xpehh}, created by @tang2007new, is also known as Rsb. \Gls{xpehh} was designed for use with \gls{snp} data rather than sequence. \Gls{xpehh} lacks power to detect intermediate frequency variants but is designed to detect variants that are near fixation or completely fixed. The \gls{ehh} of \gls{snp} site (EHHS), integrates to sum the area under the decay by distance in \gls{ehh} (iHH) which is then used as a log ratio between populations at a single site (equation \@ref(eq:xpehh)) and in a standardised form (equation \@ref(eq:xpehhstd)). Recombination rate is mostly conserved within populations so provides an internal control in \gls{xpehh} for effects of heterogeneous 
 recombination rates. Extreme values of \gls{xpehh} indicate a slower decay of \gls{ehh} in one population compared to the other. \Gls{xpehh} relies on the breakdown of \gls{ld} over time and has weak power to detect selective sweeps that were historical and ended thousands of generations ago [@Chen2010]. F~ST~ is better than \gls{xpehh} for differential selection between closely related populations because haplotype-based signals are mostly shared between geographically similar populations [@pickrell2009signals]. 
@@ -161,11 +167,11 @@ recombination rates. Extreme values of \gls{xpehh} indicate a slower decay of \g
 (\#eq:xpehhstd)
 \end{equation}
 
-#### Number of Segragating Sites by Length
+#### Number of segragating sites by length
 
 \Glsdesc{nsl} is another single population haplotypic method that is extremely similar to \gls{ihs}, however \gls{nsl} also measures the length of a segment of haplotype homozygosity between a pair of haplotypes in terms of number of mutations in the remaining haplotypes in the data set in the same region [@Ferrer-Admetlla2014]. Demographic events affect \gls{nsl} less than \gls{ihs}. Under simulations for different demographic events, \gls{nsl} had a smaller total difference in variation between the standard distribution of the test statistic and the distribution of the modelled demographic event [@Ferrer-Admetlla2014]. 
 
-### Frequency Spectrum Methods
+### Frequency spectrum methods
 
 The frequency spectrum methods are based on finding deviations in the frequency spectra of alleles that would be outside of what would be expected under neutrality. These can involve an increase in particular types of frequencies such as low, intermediate, high variant frequencies, or a difference in allele frequencies between populations. 
 
@@ -204,7 +210,7 @@ F~ST~ has been used in multiple studies as evidence for natural selection [@Akey
 
 #### Population branching statistic
 
-#### Selection by Conditional Coalescent Tree
+#### Selection by conditional coalescent tree
 
 Selection by conditional coalescent tree (SCCT; @Wang2014) detects recent positive selection by searching for an imbalance of genetic variants and conditions these on the allele frequencies of the candidate loci. SCCT pinpoints the causal variant more accurately by using a method that is based on the conditional coalescent tree method from @Wiuf1999, where haplotypes are partitioned into two subgroups according to the allelic state at a particular locus, it is assumed one subgroup carries the derived allele at the particular locus and the other subgroup carries the ancestral allele. The coalescence of a sample of haplotypes conditioning on the particular mutation means each group should coalesce together individually before the two subgroups coalesce. This is a similar idea to that of extended haplotype homozygosity used by \gls{ihs} and the results of \gls{ihs} and SCCT tends to be similar. The selection statistic (S) is based on comparing the lineage lengths of the two groups. Under neutrality S approaches $\theta$, with significant departures from $\theta$ being considered evidence of positive selection. When natural selection has a strong hitch hiking effect on a selectively favoured allele, SCCT (and \gls{ihs}) is more powerful than \gls{td}, Fay and Wu’s _H_, and measuring change in derived allele frequency (see \@ref(dafsection)). In most cases the power of SCCT is equivalent to \gls{ihs} except when selection is very strong, in which case \gls{ihs} has more power [@Wang2014]. The power of SCCT can be improved by increasing the sample size. SCCT performs moderately to population demographic events (such as bottlenecks) and out performs \gls{td} and \gls{ihs} in false discovery rate, but \gls{fwh} performed the best [@Wang2014].
 
@@ -212,24 +218,24 @@ Selection by conditional coalescent tree (SCCT; @Wang2014) detects recent positi
 
 Similar to F~ST~, \gls{ddaf} looks at population differentiation. The derived allele is determined through the use of an ancestral out-group such as chimpanzees when used in human populations. \gls{ddaf} measures the absolute difference in the derived allele frequency between two populations [@Grossman2010] and has greater power to detect sweeps, both partial and complete, and outperforms \gls{xpehh} for partial sweeps [@Colonna2014]. \gls{ddaf} was originally part of the composite of multiple sites statistic [@Grossman2010] but has also been used as a standalone metric in humans [@Colonna2014; @Gudbjartsson2015] and in other species such as cattle [@Randhawa2014] to measure differentiation.
 
-### Composite Methods
+### Composite methods
 
 Composite methods are combine multiple methods with the goal to increase overall power and/or spatial resolution for detecting selection. The combination of methods also gives greater resilience to demographic events.
 
-#### Composite Likelihood Ratio
+#### Composite likelihood ratio
 
 The \gls{clr}, created by @Kim2002, is a test for local
 hitch-hiking selection along a recombining chromosome. It calculates a null distribution of variation from neutral coalescent simulations involving recombination and uses this to calculate the probability of observing a threshold ratio of segregating variants. The @Nielsen2005a version of \gls{clr} is similar to Kim and Stephan's test but creates the null distribution from the data itself, instead of using the neutral population model. A key consideration for the use of \gls{clr} is that it is very sensitive to \gls{snp} ascertainment bias [@Chen2010].
 
-#### Cross Population Composite Likelihoods ratio
+#### Cross population composite likelihoods ratio
 
 The cross population composite likelihoods ratio (XP-CLR) is an extension of the \gls{clr} test developed by @Nielsen2009 that scans for multi-locus allele frequency differentiation between two populations and then tests if these frequency differences are too young to be consistent with neutrality based on the \gls{ld} on the region [@Chen2010]. A down-weighting of \glspl{snp} that are in perfect or high \gls{ld} is performed because they essentially provide the same information. By doing this it is hoped that false positives are reduced, since the correlation of marginal likelihood terms in the composite likelihood function is often overlooked and leads to false positives. Normalised XP-CLR scores should be resistant to variation in demographic events, however a conservative approach of using rank-order of scores across the genome is usually taken. Unlike single population \gls{clr} and similar to \gls{xpehh}, XP-CLR is resistant to \gls{snp} ascertainment bias because population differentiation is not affected by ascertainment bias. There is also a strong correlation between genes identified with XP-CLR and \gls{xpehh}. XP-CLR is also considered an extension of F~ST~ and is beginning to be used as a replacement for investigating selection in animal studies (Cattle – @Lee2014; Goats - @Benjelloun2015)
 
-#### Composite of Multiple Signals
+#### Composite of multiple signals
 
 Composite of Multiple Signals (CMS) is a combination metric composed of \gls{ihs}, \gls{xpehh}, F~ST~, \gls{ddaf}, and $\Delta$\gls{ihh}. $\Delta$\gls{ihh} is used to compare the actual length of the haplotype. CMS was created to take advantage of the combined power gained from using all metrics together to be able to detect the source of the selective signal better than any test individually could [@Grossman2010]. In CMS it was found that \gls{xpehh} and F~ST~ contributed mostly to spatially locating the causal variant whereas \gls{ihs}, \gls{ddaf}, and $\Delta$\gls{ihh} did poorly in spatially locating the selective signal but performed well at identifying the precise causal variant.
 
-#### Meta-analysis of Multiple Tests
+#### Meta-analysis of multiple tests
 
 Meta-analysis of Multiple Tests (meta-SS; @Utsunomiya2013; @Utsunomiya2015) is only able to combine selection statistics that generate P-values. It uses an adapted version of a weighted  Stouffer method to combine Z-transformed P-values. For each marker from each test _i_ the respective P-value is transformed into a Z score by Z~i~ = - $\phi$ -1(1 - $\pi$), where $\phi$ is the normal cumulative density function. Each test is weighted (w~i~) to 1/n where n is the number of comparisons. The combined statistic of k tests, for each \gls{snp} in each population is defined in equation \@ref(eq:metass).
 
@@ -239,7 +245,7 @@ meta\-SS = \frac{\sum\limits_{i =1}^k {\omega_i Z_i}}{\sqrt{\sum\limits_{i =1}^k
 \end{equation}
 
 
-#### Composite Selection Signals
+#### Composite selection signals
 
 Composite of Selection Signals is similar to meta-SS, where by it is a method for combining the results from multiple selection tests but is not limited to tests that produce P-values [@Randhawa2014]. CSS currently uses F~ST~, \gls{xpehh}, and \gls{ddaf} or change in selected allele frequency and combines them by taking the test statistic for each method across each \gls{snp}(1,…,n) then obtaining the rank of each statistic across each \gls{snp}(1 … n) and converting these into fractional ranks so they lie between 0 and 1, that is, 1/(n+1) to n/(n+1). By doing this the magnitudes of the original statistics are not used, thus increasing the robustness. The fractional ranks are converted to Z-statistics and the average z-values are calculated at each \gls{snp} position. P-values are obtained from the distribution of the means with the -log10(p) being the CSS value. The CSS is plotted against genomic position with an excess in CSS showing a common signal between the multiple test statistics.
 
@@ -291,13 +297,13 @@ The use of additional methods that capture additional loci with non-additive eff
 
 Significance of \gls{gwas} results is greatly increased when selection statistics and association studies are combined, this has been applied in a \gls{gwas} for malarial resistance variants [@Ayodo2007]. A smaller sample size can be used if there is evidence of positive selection because the beneficial allele will rise in prevalence, and will be in high \gls{ld} with other variants due to genetic hitch-hiking which can act as proxy markers [@Karlsson2014]. Complex disease traits compared to Mendelian disease associated traits have a bias towards larger mouse-human Ka/Ks ratios, which suggests that evidence of positive selection could be utilised in identifying variation associated with complex disease [@Thomas2004].
 
-### Pathway Analysis
+### Pathway analysis
 
 Pathways have been hypothesised to be involved in the genic adaptation of populations since altering a gene in a biochemical pathway are likely to alter different genes in the same pathway [@Bigham2010].  The use of pathway analysis rather than focusing on individual \glspl{snp} is another way to increase the power of a \gls{gwas} [@Jia2011]. This increase in power is largely obtained through a reduction in dimensionality in ways that attempt to remove noise from the underlying biological signal. There are however limitations to the effectiveness of using such an approach, such as the selection of pathway database, density of \glspl{snp} per gene, or gene length and boundaries.
 
 ## Applications
 
-### Genome-wide Selection
+### Genome-wide selection
 
 Genome wide selection in humans has been investigated by @sabeti2006positive, @pickrell2009signals,@voight2006map, @Hancock2008, the 1000 Genomes Project Consortium [@1KGP2010;@1KGP2012;@1KGP2015snp], @Grossman2010, @Colonna2014, and @Mallick2016. The population datasets used involved @Hapmap2005 , Human Genome Diversity Project [@Cann2002; @Rosenburg2002] and @1KGP2010. The 1000 Genomes Project Consortium [@1KGP2010; @1KGP2012; @1KGP2015snp] reported genome wide diversification between main population groups based on F~ST~ and \gls{ddaf}. Genome wide mean F~ST~ was found to only be a maximum of 8%, however several thousand SNPs had large F~ST~ indicating local population adaptation [@1KGP2010]. The analysis also found 139 non-synonymous SNPs with large frequency differences between populations. Investigation of the \gls{1kgp} data set was also performed by @Colonna2014. Using \gls{ddaf}, it was found that sites of high population differentiation (\gls{ddaf} > 0.7 between and > 0.25 within continents) clustered together, the same was found for sites of low differentiation. Genes containing highly differentiated sites were likely to also have additional evidence of positive selection in a third. 
 
@@ -312,7 +318,7 @@ Large population comparison studies have used Oceanic populations but analyses w
 A few candidate-genes for selection which also have associated with obesity and \gls{t2d} in Polynesian populations have been investigated such as the _PPARGC1A_ [@Myles2011] and _CREBRF_ [@Minster2016]. The "Thrifty-gene hypothesis" [@Neel1962] has been the reasoning behind why these loci may have undergone selection. The hypothesis was originally conceived to attempt to explain the difference in prevalence of \gls{t2d} given that there should be a strong selective pressure against it, there must be some genetic advantage. This hypothesis has been challenged in the Polynesian context as being 'just-so' stories [@Gosling2014; @Gosling2015; @Cadzow2016] with an alternative hypothesis being a link between the metabolic diseases and the innate immune system that is under selective pressure via an infectious agent, such as malaria, leading to disease susceptibility in these populations [@Gosling2015].
 
 
-### Gout and Metabolic Syndrome {#goutMetSyn}
+### Gout and metabolic syndrome {#goutMetSyn}
 
 The World Health Organisation has previously defined Metabolic Syndrome to be glucose intolerance, or diabetes mellitus, and or insulin resistance combined with at least two of the following: impaired glucose regulation or diabetes, insulin resistance, raised arterial pressure, raised plasma triglycerides or low HDL-cholesterol, central obesity, and microalbuminuria [@Alberti1998]. Hyperuricaemia can also be considered a component but is not required for the condition to be recognised. Hyperuricaemia is defined as a serum urate $\geq$ 0.42 mmol/L in males and $\geq$ 0.36 mmol/L in females [@Choi2007b]. There has been a slight revision and refinement in the criteria for a diagnosis of metabolic syndrome [@Alberti2009]. The requirement for diabetes mellitus and or insulin resistance is no longer used, instead a requirement of having 3 of the 5 co-morbidities is used.
 
